# insighted-braille-ocr-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  limitations.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.claude/: launch.json
app/: __init__.py  main.py
app/api/: demo.py  health.py  ocr.py  version.py
app/core/: config.py  logging.py  security.py
app/demo/: __init__.py  demo_page.html  local_preview.py
app/evaluation/: audit_dataset.py  audit_rawbraille_dataset.py  braille_ascii.py  capture_quality.py  diagnostic_probe.py  metrics.py  rawbraille_dataset.py  rawbraille_manifest.py  rawbraille_metrics.py  real_dataset.py  repeatability.py  run_evaluation.py  run_rawbraille_evaluation.py  sample_generator.py  (+1 more)
docs/: hosting_render.md  real_photo_validation_protocol.md  stage_3d_f_real_photo_baseline_readiness.md  stage_3d_f_sample_collection_pack.md  stage_3d_g0_ukaaf_resource_intake.md  stage_3d_g1_ukaaf_grade1_baseline.md  stage_3d_g2_noise_confidence_calibration.md  stage_3d_g3_ukaaf_grade2_rawbraille_validation.md  stage_3d_g4_dot_row_anchor_robustness.md  stage_3d_g5_rawbraille_evaluation_hardening.md  stage_3d_g6_real_capture_collection_protocol.md  stage_3d_h1_local_preview_demo.md  stage_3d_i1_liblouis_grade2_integration.md  stage_3d_j1_real_capture_ocr_diagnostic.md  stage_3d_k2_real_capture_row_cell_robustness.md  stage_3d_l1_capture_normalization.md
samples/: sample_request.json  sample_response.json
templates/: real_sample_checklist.md  real_sample_ground_truth_template.txt  real_sample_metadata_template.json
(+62 files in other folders)
